<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="selectPrintItem">Select an item to print:</string>
    <string name="app_name">HelloWorldPrint</string>
    <string name="btnPrintText">Plain Text</string>
    <string name="btnPrintHtml">HTML</string>
    <string name="btnPrintFile">File</string>
    <string name="btnPrintImage">Image</string>
    <string name="btnSubmit">Print</string>
    <string name="downloadMessageText">Download or update to the latest Breezy (&lt; v1.2.4 not supported)</string>
    <string name="downloadButtonText">Download</string>
</resources>